[merge/kkyuheak] FIX:  🚨 게시글카드 컴포넌트 오류 수정, 로그인 배경색 수정, 마이페이지 nav z-index 수정

--- a/Loopin/src/assets/css/index.css
+++ b/Loopin/src/assets/css/index.css
@@ -41,7 +41,7 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 img {
   image-rendering: -webkit-optimize-contrast; /* 대비 최적화 */
-  image-rendering: crisp-edges;  /* 선명하게 유지 */
+  image-rendering: crisp-edges; /* 선명하게 유지 */
 }
 pre {
   font-family: "GongGothicMedium";
@@ -112,4 +112,10 @@ pre {
 .Toastify__toast-container--top-center {
   top: 50px !important;
   transform: translateX(-50%);
+}
+
+.Toastify__toast {
+  width: 350px;
+  height: 80px;
+  font-size: 18px;
 }
